objects/GeEL_Exception__c.object
<CustomObject>
    <description>Used to capture Exceptions within the System</description>
    <fields>
        <fullName>ClassSource__c</fullName>
        <description>The class / method / Script in which the exception was thrown</description>
        <label>Class Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Exception_Message__c</fullName>
        <description>Custom Exception Message that was used by the class</description>
        <label>Custom Exception Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>The message which is seen by the user</description>
        <label>Exception Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>The type of exception that has been thrown (e.g. DMLException, MathException, etc.)</description>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>The line number in the class where the exception was thrown</description>
        <label>Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Intervention_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if a Manual Intervention Object should be created</description>
        <label>Manual Intervention Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>The Id of the record that caused the issue if known / was not being processed as part of a list</description>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Process__c</fullName>
        <description>The Process related to the Exception</description>
        <label>Related Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <description>The body of the web service request which caused the exception</description>
        <label>Request Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <description>The response returned in the web service which caused the exception</description>
        <label>Response Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <description>The stack trace of the exception</description>
        <label>Stack Trace</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <description>The status code returned (if the exception was caused by a web service)</description>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_of_origin__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <description>Used to determine the system of origin</description>
        <label>System of origin</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Service_Method__c</fullName>
        <description>The web service method which was used when the exception occurred (e.g. GET, POST, PUT, PATCH</description>
        <label>Web Service Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Exception</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Exp-{000000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>Used for General Exceptions</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Service</fullName>
        <active>true</active>
        <description>Used for Web Service Specific Exceptions</description>
        <label>Web Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>